--- a/www/css/style.css
+++ b/www/css/style.css
@@ -119,7 +119,7 @@ h1, h2, h3, h4, h5, h6 {
 
 
 #main-nav .navbar {
-	margin:0 auto;
+    margin:0 auto;
     text-align: center;
     min-height: 40px;
     margin-bottom: 0;
@@ -132,14 +132,14 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 20px;
 }
 #main-nav #bag{
-	padding: 0;
+    padding: 0;
 }
 
 #catering .navbar-brand  {
     padding-top: 10px !important;
 }
 #main-nav .navbar-brand  {
-	color: white;
+    color: white;
     font-family: 'Josefin Sans';
     display: inline-block;
     float: none;
@@ -148,17 +148,17 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 17px;
 }
 #main-nav .navbar-brand p {
-	font-size: 11px;
+    font-size: 11px;
 }
 
 
 #main-nav .navbar-toggle {
-	background-color: none;
+    background-color: none;
     display: inline-block;
 }
 
 #main-nav .navbar-toggle span {
-	background-color: white;
+    background-color: white;
 }
 
 
@@ -168,13 +168,13 @@ h1, h2, h3, h4, h5, h6 {
 
 /*
 #main-nav .navbar-left li a {
-	font-family: 'Josefin Sans';
-	font-size: 18px;
-	line-height: 30px;
+    font-family: 'Josefin Sans';
+    font-size: 18px;
+    line-height: 30px;
     padding: 0;
     letter-spacing: 1px;
     display: block;
-	color: #2b2b2b;
+    color: #2b2b2b;
     background: white;
     text-align: left;
     font-weight: 400px;
@@ -182,10 +182,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 */
 #main-nav .navbar-left li p {
-	margin: 0;
+    margin: 0;
 }
 #main-nav .navbar-left li span {
-	color: #000;
+    color: #000;
     padding: 0 5px;
     
 }
@@ -209,6 +209,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Josefin Sans';
     padding: 15px;
     font-size: 12px;
+    background-color:rgba(255, 255, 255, .6);
     width: 70%;
     margin: 0 auto;
 }
@@ -292,7 +293,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 .title a{
     font-family: 'Josefin Sans';
-    font-size: 14pt;
+    font-size: 16pt;
     color: black;
     display: inline-block;
     text-decoration: none;
@@ -411,18 +412,6 @@ a{
     font-size: 11pt;
     margin: 0 auto;
     border-radius: 0;
-    text-align: center;
-    background-color: #000;
-}
-.tombol{
-    padding: 10px;
-    height: 40px;
-    vertical-align: middle;
-    color: white;
-    font-size: 11pt;
-    margin: 0 auto;
-    border-radius: 5px;
-    border: none;
     text-align: center;
     background-color: #000;
 }
@@ -557,12 +546,13 @@ a{
     border: 1px solid #000;
 }
 #back{
+    font-size: 25px;
     background: none;
     float: left;
     position: relative;
     border: none;
     color: white;
-    padding: 15px 15px 0 15px;
+    padding: 30px 15px 0 15px;
     outline: none;
 }
 #add{
@@ -740,7 +730,7 @@ a{
 }
 #login button{
     text-align: center;
-    width: 100%;
+    width: 80%;
 }
 #social{
     margin-top: 20px;
@@ -774,7 +764,7 @@ a{
     display: inline-block;
     margin: 0 auto;
     text-align: center;
-/*    width: 32%*/
+    width: 32%
 }
 #checkout #step ul li.disabled a{
     color: #ccc;
@@ -843,11 +833,6 @@ a{
 }
 #checkout #box {
     padding: 15px;
-    background-color: gainsboro;
-}
-#checkout #box{
-    padding: 15px;
-    background-color: gainsboro;
 }
 #checkout #date1 #box select:focus{
     border: 1px solid #000;
@@ -893,7 +878,7 @@ a{
 }
 #checkout #finish{
     width: 100%;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 #checkout #pay #tab2 ul li{
     list-style-type: circle;
@@ -902,29 +887,29 @@ a{
 
 /*Material Form css*/
 #material  {
-	font-family: 'Josefin sans', sans-serif;
-	padding-top: 8%;
+    font-family: 'Josefin sans', sans-serif;
+    padding-top: 8%;
 }
 #material .group {
-	position: relative; 
-	margin-bottom: 10%;
-	padding-bottom: 2%;
+    position: relative; 
+    margin-bottom: 10%;
+    padding-bottom: 2%;
 }
 #material textarea {
   resize: none;
   height:10%;
-	width: 100%;
+    width: 100%;
 }
 #material input, #material textarea {
-	font-size: 18px;
-	padding: 10px 10px 10px 5px;
-	-webkit-appearance: none;
-	display: block;
-	color: #636363;
-	border: none;
-	border-radius: 0;
-	border-bottom: 1px solid grey;
-	width: 100%;
+    font-size: 18px;
+    padding: 10px 10px 10px 5px;
+    -webkit-appearance: none;
+    display: block;
+    color: #636363;
+    border: none;
+    border-radius: 0;
+    border-bottom: 1px solid grey;
+    width: 100%;
 }
 
 #material input:focus, #material textarea:focus { outline: none; border: none; }
@@ -933,60 +918,60 @@ a{
 /* Label */
 
 #material label {
-	color: #999; 
-	font-size: 14px;
-	position: absolute;
-	pointer-events: none;
-	left: 5px;
-	top: 10px;
-	transition: all 0.2s ease;
+    color: #999; 
+    font-size: 14px;
+    position: absolute;
+    pointer-events: none;
+    left: 5px;
+    top: 10px;
+    transition: all 0.2s ease;
 }
 
 
 /* active */
 
 #material input:focus ~ label, #material input.used ~ label, #material textarea:focus ~ label {
-	top: -20px;
+    top: -20px;
   transform: scale(.75); left: -2px;
-	color: #4a89dc;
+    color: #4a89dc;
 }
 #material textarea:focus ~ label, #material textarea.used ~ label, #material textarea:focus ~ label {
-	top: -20px;
+    top: -20px;
   transform: scale(.75); left: -2px;
-	color: #4a89dc;
+    color: #4a89dc;
 }
 
 /* Underline */
 
 .bar {
-	position: relative;
-	display: block;
-	width: 100%;
+    position: relative;
+    display: block;
+    width: 100%;
 }
 .bar:before, .bar:after {
-	content: '';
-	height: 2px; 
-	width: 0;
-	bottom: 10px; 
-	position: absolute;
-	background: black; 
-	transition: all 0.2s ease;
+    content: '';
+    height: 2px; 
+    width: 0;
+    bottom: 10px; 
+    position: absolute;
+    background: black; 
+    transition: all 0.2s ease;
 }
 
 .bar:before { left: 50%; }
 
 .bar:after { right: 50%; }
 #barname:before, #barname:after {
-	bottom: 5%;
+    bottom: 5%;
 }
 #barmail:before, #barmail:after {
-	bottom: 0;
+    bottom: 0;
 }
 #barsub:before, #barsub:after {
-	bottom: 5%;
+    bottom: 5%;
 }
 #barmsg:before, #barmsg:after {
-	bottom: 0;
+    bottom: 0;
 }
 /* active */
 
@@ -996,27 +981,27 @@ a{
 /* Highlight */
 
 .highlight {
-	position: absolute;
-	height: 60%; 
-	top: 35%; 
-	left: 0;
-	pointer-events: none;
-	opacity: 0.5;
+    position: absolute;
+    height: 60%; 
+    top: 35%; 
+    left: 0;
+    pointer-events: none;
+    opacity: 0.5;
 }
 
 
 /* active */
 
 input:focus ~ .highlight, textarea:focus ~ .highlight {
-	animation: inputHighlighter 0.3s ease;
+    animation: inputHighlighter 0.3s ease;
 }
 
 
 /* Animations */
 
 @keyframes inputHighlighter {
-	from { background: black; }
-	to 	{ width: 0; background: transparent; }
+    from { background: black; }
+    to 	{ width: 0; background: transparent; }
 }
 
 
@@ -1099,7 +1084,6 @@ h3.balance {
 .ff2 {
     font-weight: bold !important;
     font-family: 'Josefin sans', sans-serif;
-    color: #000;
 }
 a.terms{
     font-size: 10px !important;
@@ -1108,42 +1092,331 @@ a.terms{
     display: block;
     margin: 0 auto;
 }
+
+
 /* Material Dropdown */
+.mdrop {
+    box-sizing: border-box;
+    cursor: default;
+    margin: 0;
+    font-family: 'Josefin sans',sans-serif;
+    font-weight: normal !important;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+  }
 
-/*loader */
-.loader {
-/*
-  border: 16px solid #000;
-  border-radius: 50%;
-  border-top: 16px solid #EAB700;
-*/
-  width: 75px;
-  height: 75px;
-/*
-  -webkit-animation: spin 2s linear infinite;
-  animation: spin 2s linear infinite;
-*/
-  margin-left: auto;
-  margin-right: auto;
-  display: none;
-  z-index: 10;
-  position: absolute;
-  top: 30%;
-  left: 38%;
-  background-image: url(../images/zoomloader.gif);
-    
+  * {
+    box-sizing: inherit;
+    cursor: inherit;
+    transition-duration: .2s;
+    transition-property: none;
+    transition-timing-function: cubic-bezier(0.42, 0, 0.58, 1);
+  }
+
+  label.field {
+    border-radius: 2px;
+    color: #666;
+    display: block;
+    margin: 16px;
+    max-width: 300px;
+    padding: 8px;
+    opacity: 0;
+    position: relative;
+    transition-property: opacity;
+    z-index: 1;
+  }
+  label.field span {
+    color: inherit;
+    display: block;
+    font-size: 16px;
+    height: 20px;
+    line-height: 20px;
+    left: 9px;
+    pointer-events: none;
+    position: absolute;
+    top: 32px;
+    -webkit-transform: scale(1) translateY(0);
+            transform: scale(1) translateY(0);
+    transition-property: color, font-size, top;
+    z-index: 1;
+  }
+  label.field span.required::after {
+    color: inherit;
+    content: "*";
+    display: block;
+    height: 20px;
+    left: -20px;
+    line-height: 20px;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    width: 20px;
+  }
+  .error label.field span {
+    color: #F02318;
+  }
+  label.field .psuedo_select {
+    background: rgba(255, 255, 255, 0);
+    position: relative;
+    border-color: #000;
+    border-style: solid;
+    border-width: 0 0 2px 0;
+    color: #666;
+    display: inline-block;
+    cursor: pointer;
+    font-size: 20px;
+    height: 24px;
+    line-height: 24px;
+    margin: 24px 32px 0 0;
+    min-width: 250px;
+    padding-top: 24px;
+    outline: 0;
+    z-index: 1;
+  }
+  label.field .psuedo_select::after {
+    background: url("data:image/svg+xml;utf8,<svg fill='#666' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'> <path d='M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z'/> <path d='M0-.75h24v24H0z' fill='none'/> </svg>"), no-repeat;
+    content: "";
+    height: 24px;
+    width: 24px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    transition-property: background;
+  }
+  label.field .psuedo_select .selected {
+    height: 24px;
+    left: 1px;
+    line-height: 24px;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    -webkit-transform: translateY(24px);
+            transform: translateY(24px);
+    transition-property: opacity, -webkit-transform;
+    transition-property: opacity, transform;
+    transition-property: opacity, transform, -webkit-transform;
+    will-change: transform;
+  }
+  label.field .psuedo_select ul {
+    background: #fff;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.14);
+    display: block;
+    height: 0;
+    list-style: none;
+    margin-top: 2px;
+    opacity: 0;
+    overflow: hidden;
+    padding: 0 1px;
+    pointer-events: none;
+    transition-property: height, opacity;
+    width: 100%;
+    z-index: 2;
+  }
+  label.field .psuedo_select ul li {
+    height: 32px;
+    padding: 8px 4px;
+  }
+  label.field .deselect {
+    height: 100vh;
+    left: 0;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    z-index: -1;
+  }
+  label.field.focused {
+    color: #007BED;
+  }
+  label.field.focused .psuedo_select {
+    border-color: #007BED;
+  }
+  label.field.focused .psuedo_select::after {
+    background: url("data:image/svg+xml;utf8,<svg fill='#007BED' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'> <path d='M7.41 7.84L12 12.42l4.59-4.58L18 9.25l-6 6-6-6z'/> <path d='M0-.75h24v24H0z' fill='none'/> </svg>"), no-repeat;
+  }
+  label.field.focused .psuedo_select ul {
+    opacity: 1;
+    pointer-events: all;
+  }
+  /* /Material Dropdown */
+
+
+  .accordion {
+    background-color: #fff;
+    padding: 1%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 6px 0 rgba(0, 0, 0, 0.19);
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 90%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
 }
 
- @-webkit-keyframes spin {
-          0% { -webkit-transform: rotate(0deg); }
-          100% { -webkit-transform: rotate(360deg); }
+.active2, .accordion:hover {
+    background-color: #fff;
 }
 
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+.accordion:after {
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-top: -5px;
+    margin-left: 5px;
 }
 
-.clear{ clear: both;}
+.active2:after {
+    margin-top: 5px;
+}
+
+.panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+}
 
 
+
+
+
+/* DRIVER APP */
+button.app {
+    display: block;
+    margin: 0 auto;
+    border: 2px dashed black;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 15px;
+    outline: none;
+}
+
+.mtop {
+    margin-top: 3%;
+}
+.mtop2 {
+    margin-top: 6%;
+}
+.mtop3 {
+    margin-top: 20%;
+}
+
+span.lbl {
+    font-family: 'Josefin sans', sans-serif;
+    text-align: center;
+    font-weight: bold;
+    display: block;
+    margin: 0 auto;
+    padding-left: 5px;
+}
+
+a.chk {
+    display: block;
+    text-align: center !important;
+    color: #561eee;
+    font-weight: bold;
+    font-family: 'Josefin sans', sans-serif;
+}
+
+.rw {
+    background-color: #fff;
+}
+
+.balance2{
+    background-color: #e8af00;
+    color: white;
+    font-family: 'Josefin sans', sans-serif;
+    font-weight: bold;
+    display: inline-block;
+    margin: 0 auto;
+    padding: 7px;
+    margin-bottom: 10px;
+}
+
+img.cust-img {
+    display: block;
+    margin: 0 auto;
+}
+.img-rounded2 {
+    border-radius: 50%;
+}
+
+.menu-list {
+    background-color: #fff;
+    padding: 2%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 3px;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2), 0 2px 6px 0 rgba(0, 0, 0, 0.19);
+    color: #444;
+    cursor: pointer;
+    border: none;
+}
+
+.btnorder {
+    background-color: #e8af00;
+    color: white;
+    font-family: 'Josefin sans', sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+    display: block;
+    margin: 0 auto;
+    width: 95%;
+    padding: 7px;
+}
+
+.total>tbody>tr>td {
+    border-top: none;
+}
+
+.gtotal {
+    background-color: #e8af00;
+    color: white;
+    text-align: center;
+    font-family: 'Josefin sans', sans-serif;
+    font-weight: bold;
+    font-size: 18px;
+    display: block;
+    margin: 0 auto;
+    padding: 4px;
+    width: 80%;
+}
+
+button.bookbtn {
+    display: block;
+    margin: 45px auto;
+    font-size: 28px;
+    border: 3px solid #e7af00;
+    color: white;
+    background-color: #000;
+    outline: none;
+    padding: 50px 30px;
+    border-radius: 50%;
+    animation: colorchange 3s cubic-bezier(1,0,0,1) infinite;
+}
+
+span.midd{
+    text-align: center;
+    display: block;
+}
+
+@keyframes colorchange {
+    0%   {background: #000;color: white;}
+    50%  {background: #fff;color: black;}
+    100% {background: #000;color: white;}
+}
+
+.stt {
+    font-weight: bold;
+    background-color: #e7af00;
+    color: white;
+    padding: 5px 8px;
+}
