--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1433,8 +1433,8 @@ span.midd{
   margin-right: auto;
   display: none;
   z-index: 10;
-  position: absolute;
-  top: 30%;
+  position: fixed;
+  top: 35%;
   left: 38%;
   background-image: url(../images/zoomloader.gif);
     
